# Aequor

./: .env.example  .gitignore  README.md  context.md  docker-compose.yml  package-lock.json  package.json  pytest.ini
apps/Argus/: Dockerfile  __main__.py  config.py  core.py  solana_writer.py
apps/Argus/adapters/: __init__.py  base.py  figma.py  github.py  notion.py  webhook.py
apps/agent1/: .env  __init__.py  config.py  core.py  requirements.txt  schema.py
apps/agent1/adapters/: github.py  notion.py  webhook.py
apps/agent2_scorer/: __init__.py  core.py  requirements.txt
apps/api/: .env.example  package.json  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/src/: index.ts
apps/api/src/agents/: index.ts
apps/api/src/blockchain/: index.ts
apps/api/src/config/: index.ts
apps/api/src/db/: index.ts  redis.ts
apps/api/src/events/: emitter.ts
apps/tests/: conftest.py  test_agent1.py  test_argus.py
apps/tests/fixtures/: sample_figma_event.json  sample_github_event.json
apps/web/app/: globals.css  layout.tsx  page.tsx
chain/: Anchor.toml
chain/.anchor/test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  test-ledger-log.txt  validator-keypair.json  vote-account-keypair.json
chain/programs/aequor/: Cargo.toml
chain/programs/escrow/: Cargo.toml
chain/programs/reputation/: Cargo.toml
chain/programs/reputation/src/: lib.rs
chain/programs/stream_payment/: Cargo.toml
chain/programs/stream_payment/src/: lib.rs
chain/programs/swarm_bus/: Cargo.toml
chain/programs/swarm_bus/src/: lib.rs
(+42 files in other folders)
