[package]
name = "stream_payment"
version = "0.1.0"
description = "Aequor: Stream Payment Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stream_payment"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"